--- a/Cafes information Provider/templates/index.html
+++ b/Cafes information Provider/templates/index.html
@@ -102,5 +102,6 @@
         <a href="https://github.com/yonayetol/"><i class="fa-brands fa-github fa-2xl"></i></a>
         <a href="mailto:japutest6@gmail.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
     </div>
+    <div> &copy {{year}},Yonas Ayele</div>
 </footer>
 </html>
